# Computer-Graphics-with-Modern-OpenGL-and-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  configure.bat
OpenGLCourse/: OpenGLCourse.sln
OpenGLCourse/Dependencies/STB_IMAGE/: stb_image.h
OpenGLCourse/OpenGLCourse/: Camera.h  Mesh.cpp  OpenGLCourse.vcxproj  OpenGLCourse.vcxproj.filters  Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h  main.cpp
OpenGLCourse/OpenGLCourse/Models/: arthas.mtl
OpenGLCourse/OpenGLCourse/Shaders/: omni_shadow_map_frag.glsl  omni_shadow_map_geom.glsl  shader.frag  shader_frag.glsl  shader_vert.glsl  skybox_frag.glsl
OpenGLCourse/OpenGLCourse/src/: Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h  Texture.cpp  (+4 more)
OpenGLCourseApp/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  OpenGLCourseApp.cpp  OpenGLCourseApp.sln  OpenGLCourseApp.vcxproj  OpenGLCourseApp.vcxproj.filters  Shader.cpp  Shader.h  Window.cpp  Window.h
OpenGLCourseApp/Shaders/: shader.frag  shader.vert
Shaders/: omni_directional_shadow_map_frag.glsl  omni_directional_shadow_map_geom.glsl  omni_directional_shadow_map_vert.glsl  omni_shadow_map_vert.glsl  shader_frag.glsl  skybox_vert.glsl
src/: Camera.cpp  Material.cpp  Material.h  Model.cpp  OmniShadowMap.cpp  Skybox.cpp  SpotLight.cpp  Texture.cpp  Window.cpp  main.cpp
